Added Inputnumber parsing

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   </head>
   <body>
     <input id="inputNumber" placeholder="Enter Number"> 
-    <input type="submit" id="submitButton">
-    <div id="lastTwoCount"></div>
+    <input type="submit" id="submitButton"><br><br>
     <table border="1" id="table">
         <thead>
           <tr>
@@ -22,17 +21,23 @@
           <tr>
               <td class="date">02.02.2021</td>
               <td class="count">1</td>
-              <td class="remove">add/remove</td>
+              <td class="actionButton">
+                <label class="addButton">add</label>/<label class="removeButton">remove</label>
+              </td>
           </tr>
           <tr>
               <td class="date">02.02.2021</td>
               <td class="count">1</td>
-              <td class="remove">add/remove</td>
+              <td class="actionButton">
+                <label class="addButton">add</label>/<label class="removeButton">remove</label>
+              </td>
           </tr>
           <tr>
               <td class="date">02.02.2021</td>
               <td class="count">1</td>
-              <td class="remove">add/remove</td>
+              <td class="actionButton">
+                <label class="addButton">add</label>/<label class="removeButton">remove</label>
+              </td>     
           </tr>
           
         </tbody>
@@ -43,7 +48,7 @@
         
 
 </table>
-
+<div id="lastTwoCount"></div>
 
     <script src="script.js"></script>
   </body>
