--- a/index.html
+++ b/index.html
@@ -5,16 +5,19 @@
     <meta name="viewport" content="width=device-width">
     <title>LEARNING</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
+      integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+      crossorigin="anonymous"></script>
   </head>
   <body>
     <input id="inputNumber" placeholder="Enter Number"> 
-    <input type="submit" id="submitButton"><br><br>
+    <input type="submit" id="submitButton" onclick="submitButton()"><br><br>
     <table border="1" id="table">
         <thead>
           <tr>
-            <th>time</th>
-            <th>count</th>
-            <th>action</th>
+            <th>Time</th>
+            <th>Count</th>
+            <th>Action</th>
           </tr>
         </thead>
         <tbody id="tableBody">
@@ -22,21 +25,24 @@
               <td class="date">02.02.2021</td>
               <td class="count">1</td>
               <td class="actionButton">
-                <label class="addButton">add</label>/<label class="removeButton">remove</label>
+                <button onclick="addButton()">Add</button>
+                <button onclick="removeRow(this)">Remove</button>
               </td>
           </tr>
           <tr>
               <td class="date">02.02.2021</td>
-              <td class="count">1</td>
+              <td class="count">2</td>
               <td class="actionButton">
-                <label class="addButton">add</label>/<label class="removeButton">remove</label>
+                <button onclick="addButton(this)">Add</button>
+                <button onclick="removeRow(this)">Remove</button>
               </td>
           </tr>
           <tr>
               <td class="date">02.02.2021</td>
-              <td class="count">1</td>
+              <td class="count">3</td>
               <td class="actionButton">
-                <label class="addButton">add</label>/<label class="removeButton">remove</label>
+                <button onclick="addButton()">Add</button>
+                <button onclick="removeRow(this)">Remove</button>
               </td>     
           </tr>
           
