refactor code, + jquery

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <td class="date">02.02.2021</td>
               <td class="count">1</td>
               <td class="actionButton">
-                <button onclick="addButton()">Add</button>
+                <button onclick="focusInput()">Add</button>
                 <button onclick="removeRow(this)">Remove</button>
               </td>
           </tr>
@@ -55,7 +55,8 @@
 
 </table>
 <div id="lastTwoCount"></div>
-
+<div>
+  <a href="https://github.com/AntonMett/AntonMett.github.io" class="sourceButton">SOURCE</a>
     <script src="script.js"></script>
   </body>
 </html>
