--- a/index.html
+++ b/index.html
@@ -2,17 +2,26 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>LEARNING</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+      integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
+      crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.6.0.js"
       integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
       crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
+      integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
+      crossorigin="anonymous"></script>
   </head>
   <body>
-    <input id="inputNumber" placeholder="Enter Number"> 
-    <input type="submit" id="submitButton" onclick="submitButton()"><br><br>
-    <table border="1" id="table">
+    <div class="container pt-3 border">
+      <input id="inputNumber" placeholder="Enter Number"> 
+      <input type="submit" id="submitButton" onclick="submitButton()"><br><br>
+      <table border="1" id="table">
         <thead>
           <tr>
             <th>Time</th>
@@ -26,6 +35,7 @@
               <td class="count">1</td>
               <td class="actionButton">
                 <button onclick="focusInput()">Add</button>
+                <button>Edit</button>
                 <button onclick="removeRow(this)">Remove</button>
               </td>
           </tr>
@@ -33,7 +43,8 @@
               <td class="date">02.02.2021</td>
               <td class="count">2</td>
               <td class="actionButton">
-                <button onclick="addButton(this)">Add</button>
+                <button onclick="focusInput()">Add</button>
+                <button>Edit</button>
                 <button onclick="removeRow(this)">Remove</button>
               </td>
           </tr>
@@ -41,7 +52,8 @@
               <td class="date">02.02.2021</td>
               <td class="count">3</td>
               <td class="actionButton">
-                <button onclick="addButton()">Add</button>
+                <button onclick="focusInput()">Add</button>
+                <button>Edit</button>
                 <button onclick="removeRow(this)">Remove</button>
               </td>     
           </tr>
@@ -51,12 +63,12 @@
               <td>TOTAL:</td>
               <td colspan="2" id="total"></td>
           </tr>
-        
-
-</table>
-<div id="lastTwoCount"></div>
-<div>
-  <a href="https://github.com/AntonMett/AntonMett.github.io" class="sourceButton">SOURCE</a>
+      </table>
+      <div id="lastTwoCount"></div>
+      <div class="container pt-3 border">
+        <a href="https://github.com/AntonMett/AntonMett.github.io" class="btn btn-success" role="button">SOURCE</a>
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
