--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
   <body>
     <div class="container pt-3 border">
       <input id="inputNumber" placeholder="Enter Number"> 
-      <input type="submit" id="submitButton" onclick="submitButton()"><br><br>
-      <table border="1" id="table">
+      <input type="submit" id="submitButton" onclick="submitNumber()"><br><br>
+      <table class="table table-striped table-hover table-sm" id="table">
         <thead>
           <tr>
-            <th>Time</th>
+            <th>Date</th>
             <th>Count</th>
             <th>Action</th>
           </tr>
@@ -35,7 +35,7 @@
               <td class="count">1</td>
               <td class="actionButton">
                 <button onclick="focusInput()">Add</button>
-                <button>Edit</button>
+                <button type="button" data-toggle="modal" data-target="#myModal">Edit</button>
                 <button onclick="removeRow(this)">Remove</button>
               </td>
           </tr>
@@ -44,7 +44,7 @@
               <td class="count">2</td>
               <td class="actionButton">
                 <button onclick="focusInput()">Add</button>
-                <button>Edit</button>
+                <button type="button" data-toggle="modal" data-target="#myModal">Edit</button>
                 <button onclick="removeRow(this)">Remove</button>
               </td>
           </tr>
@@ -53,20 +53,39 @@
               <td class="count">3</td>
               <td class="actionButton">
                 <button onclick="focusInput()">Add</button>
-                <button>Edit</button>
+                <button type="button" data-toggle="modal" data-target="#myModal">Edit</button>
                 <button onclick="removeRow(this)">Remove</button>
               </td>     
           </tr>
           
         </tbody>
-          <tr>
-              <td>TOTAL:</td>
+          <tr class="table-primary">
+              <td >TOTAL:</td>
               <td colspan="2" id="total"></td>
           </tr>
       </table>
       <div id="lastTwoCount"></div>
       <div class="container pt-3 border">
         <a href="https://github.com/AntonMett/AntonMett.github.io" class="btn btn-success" role="button">SOURCE</a>
+      </div>
+      <div class="modal fade" id="myModal">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h4 class="modal-title">Modal Heading</h4>
+              <button type="button" class="close"
+                data-dismiss="modal">&times;</button>
+            </div>
+            <div class="modal-body">
+              Modal body..
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-danger"
+                data-dismiss="modal">Close</button>
+            </div>
+      
+          </div>
+        </div>
       </div>
     </div>
     <script src="script.js"></script>
