--- a/index.html
+++ b/index.html
@@ -5,17 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>LEARNING</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
+    
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
+      integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+      crossorigin="anonymous">
+    </script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"
+      integrity="sha512-T/tUfKSV1bihCnd+MxKD0Hm1uBBroVYBOYSk1knyvQ9VyZJpc/ALb4P0r6ubwVPSGB2GvjeoMAJJImBG12TiaQ=="
+      crossorigin="anonymous" referrerpolicy="no-referrer">
+    </script>
+    <link rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css"
+      integrity="sha512-mSYUmp1HYZDFaVKK//63EcZq4iFWFjxSL+Z3T/aCt4IO9Cejm03q3NKKYN6pFQzY0SBOr8h+eCIAZHPXcpZaNw=="
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
+      integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
+      crossorigin="anonymous">
+    </script>
     <link rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
       integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
       crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.6.0.js"
-      integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
-      crossorigin="anonymous"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
-      integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
-      crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="container pt-3 border">
@@ -35,7 +47,7 @@
               <td class="count">1</td>
               <td class="actionButton">
                 <button onclick="focusInput()">Add</button>
-                <button type="button" data-toggle="modal" data-target="#myModal">Edit</button>
+                <button onclick="resetCalendar()" type="button" data-toggle="modal" data-target="#myModal">Edit</button>
                 <button onclick="removeRow(this)">Remove</button>
               </td>
           </tr>
@@ -44,7 +56,7 @@
               <td class="count">2</td>
               <td class="actionButton">
                 <button onclick="focusInput()">Add</button>
-                <button type="button" data-toggle="modal" data-target="#myModal">Edit</button>
+                <button onclick="resetCalendar()" type="button" data-toggle="modal" data-target="#myModal">Edit</button>
                 <button onclick="removeRow(this)">Remove</button>
               </td>
           </tr>
@@ -53,7 +65,7 @@
               <td class="count">3</td>
               <td class="actionButton">
                 <button onclick="focusInput()">Add</button>
-                <button type="button" data-toggle="modal" data-target="#myModal">Edit</button>
+                <button onclick="resetCalendar() "type="button" data-toggle="modal" data-target="#myModal">Edit</button>
                 <button onclick="removeRow(this)">Remove</button>
               </td>     
           </tr>
@@ -65,19 +77,19 @@
           </tr>
       </table>
       <div id="lastTwoCount"></div>
-      <div class="container pt-3 border">
+      <div class="container pt-3 d-flex justify-content-center">
         <a href="https://github.com/AntonMett/AntonMett.github.io" class="btn btn-success" role="button">SOURCE</a>
       </div>
       <div class="modal fade" id="myModal">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <h4 class="modal-title">Modal Heading</h4>
+              <h4 class="modal-title">Choose Date</h4>
               <button type="button" class="close"
                 data-dismiss="modal">&times;</button>
             </div>
             <div class="modal-body">
-              Modal body..
+              <div id="datepicker"></div>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-danger"
@@ -87,7 +99,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> 
     <script src="script.js"></script>
   </body>
 </html>
