added date modification feature

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <td class="count">1</td>
               <td class="actionButton">
                 <button onclick="focusInput()">Add</button>
-                <button onclick="resetCalendar(), selectEditDate(this)" type="button" data-toggle="modal" data-target="#myModal">Edit</button>
+                <button onclick="resetCalendar(), selectDateIndex(this)" type="button" data-toggle="modal" data-target="#myModal">Edit</button>
                 <button onclick="removeRow(this)">Remove</button>
               </td>
           </tr>
@@ -56,7 +56,7 @@
               <td class="count">2</td>
               <td class="actionButton">
                 <button onclick="focusInput()">Add</button>
-                <button onclick="resetCalendar()" type="button" data-toggle="modal" data-target="#myModal">Edit</button>
+                <button onclick="resetCalendar(), selectDateIndex(this)" type="button" data-toggle="modal" data-target="#myModal">Edit</button>
                 <button onclick="removeRow(this)">Remove</button>
               </td>
           </tr>
@@ -65,7 +65,7 @@
               <td class="count">3</td>
               <td class="actionButton">
                 <button onclick="focusInput()">Add</button>
-                <button onclick="resetCalendar() "type="button" data-toggle="modal" data-target="#myModal">Edit</button>
+                <button onclick="resetCalendar(), selectDateIndex(this)"type="button" data-toggle="modal" data-target="#myModal">Edit</button>
                 <button onclick="removeRow(this)">Remove</button>
               </td>     
           </tr>
